--- a/.github/workflows/run-rspec.yaml
+++ b/.github/workflows/run-rspec.yaml
@@ -11,7 +11,7 @@ env:
 jobs:
   rspec-test:
     name: RSpec
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-16.04
 
     services:
         mysql:
@@ -20,11 +20,13 @@ jobs:
             - 3306
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - name: Install Ruby
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ env.RUBY_VERSION }}
+      - name: Install MySQL client package 
+        run: sudo apt-get install libmysqlclient-dev       
       - name: Install dependencies
         run: |
           gem install bundler -v 1.17
